Changelog
================================================
0.3.0
------------------------------------------------
(unreleased)

- Make sure to handle exceptions in auth plugins properly.
  [lgraf]

- Consider all authentication plugins when checking credentials.
  [lgraf]

0.2.5
------------------------------------------------
20-06-2014

- Improved PAS plugin.

0.2.4
------------------------------------------------
30-01-2014

- Minor fixes.

0.2.3
------------------------------------------------
29-01-2014

- Making sure the URL to reset the bar-code in template is not escaped.

0.2.2
------------------------------------------------
29-01-2014

- Send e-mail in "text/html" format for requst bar code reset template.

0.2.1
------------------------------------------------
29-01-2014

- Fix typo in `helpers.extract_ip_address_from_request` (proxy related).

0.2
------------------------------------------------
23-01-2014

- Now admins are able to force the two-step verification for all users (app control panel).
- Omit two-step verification for white-listed IP addresses (app control panel).
- Links to enable/disable two-step verification moved from "Personal preferences" page to 
  Plone menu (next to "Log out").

0.1.1
------------------------------------------------
15-01-2014

- Fixes in manifest.

0.1
------------------------------------------------
13-01-2014

- Initial release (no longer available on PyPI), with two-step verification, bar-code/token recover,
  basic app control panel.